# SEEK

./: .clauderc  .env.develop  .env.example  .envrc  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  .vercelignore  CLAUDE.md  COORDINATE_IMPORT_CONTEXT.md  DATABASE_OPTIMIZATION_STRATEGY.md  DATABASE_SCHEMA.md  FOIA_Example.csv  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_SUMMARY.md  INFINITE_LOOP_FIX_SUMMARY.md  Makefile  PRE_COMMIT_SETUP.md  PROJECT_MEMORY.md  REACT_INFINITE_LOOP_SOLUTION.md  REACT_TROUBLESHOOTING_QUICK_REFERENCE.md  README.md  REDIS_INFRASTRUCTURE.md  RegridSchema.xlsx  SCHEMA_AUDIT_REPORT.md  TASK_1_3_TESTING_REPORT.md  TASK_2_TECHNICAL_DECISIONS.md  TASK_3_2_API_DOCUMENTATION.md  analyze_regrid_schema.py  bexar_county_import_optimization.md  check_cities.py  check_counties.py  cleanup_project_optimization.sh  clear-session.js  coordinate_investigation_results.json  create_seek_schema.sql  database-schema-analysis.md  database_optimization_plan.sql  database_performance_analysis.md  (+59 more)
.claude/: config.yaml  settings.local.json
.claude/agents/: backend-typescript-architect.md  data-engineer.md  database-pro.md  error-detective.md  project-task-planner.md  prompt-engineer.md  senior-code-reviewer.md  ui-engineer.md
.claude/prompts/: zoning-updater.md
.devcontainer/: devcontainer.json
.github/: CICD_DOCUMENTATION.md  README.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: security.yml
.github/workflows/: ci.yml  cleanup.yml  pr-labeler.yml  security.yml  test.yml
.husky/: pre-commit
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
backend/: .env.example  DATABASE_CONNECTION_MANAGEMENT.md  README.md  SECURITY_DEPLOYMENT_GUIDE.md  benchmark_database_performance.py  pyproject.toml  test_database_connection.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  auth.py  cache_monitoring.py  database_monitoring.py  database_operations.py  system_monitoring.py
backend/src/core/: config.py  database.py  database_manager.py  database_monitoring.py  dependencies.py  exceptions.py  logging.py  redis.py  security.py
backend/src/models/: __init__.py  property.py  user.py
backend/src/schemas/: __init__.py  property.py  user.py
backend/src/services/: __init__.py  adaptive_pool_manager.py  cache_invalidation.py  cache_services.py  concurrency_manager.py  database_connection_manager.py  database_health_monitor.py  database_resilience.py  database_services.py  etl_database_service.py  redis_monitoring.py
config/: database.yml  logging.yml
docs/: DEBUG_UTILITIES.md  TYPESCRIPT_TYPES.md
docs/archive/: CLAUDE.md  IMPLEMENTATION_GUIDE.md  README.md
docs/development/: CLEANUP_COMMANDS.md
docs/status_reports/: coordinate_update_analysis_report.md
docs/tasks/: TASK_3_1_COMPLETION_REPORT.md
docs/technical/: rls_management_guide.md
examples/: debug_integration_example.py  typescript_types_usage.ts
frontend/: .prettierrc.json  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: README.md  dev-setup.sh  populate_sample_data.sql  setup-branch-protection.sh  switch-env.sh  verify-setup.py  verify-simple.sh
scripts/analysis/: coordinate_analysis.py  coordinate_root_cause_analysis.py  debug_coordinates.py  debug_fort_worth_comprehensive.py  debug_fort_worth_simple.py  parcel_matching_analysis.py
scripts/database/: add_missing_columns_psql.py  add_missing_parcel_columns.py  check_database_schema.py  detailed_schema_check.py  inspect_missing_tables.py  task_3_1_database_validation.py  task_3_1_supabase_validation.py
scripts/foia/: foia_address_matcher.py  fort_worth_matching_analysis.py
scripts/import/: auto_batch_import.py  batch_mass_import.py  coordinate_bulk_update.py  coordinate_bulk_update_production.py  coordinate_import_optimized.py  enhanced_batch_mass_import.py  enhanced_schema_normalizer.py  fast_supabase_import.py  final_mass_import.py  focused_mass_import.py  import_single_county.py  import_texas_counties.py  lewisville_foia_coordinate_processor.py  lewisville_foia_processor.py  mvp_data_pipeline.py  optimized_batch_import.py  optimized_single_county_import.py  simple_mass_import.py  smart_resume_import.py  supabase_cli_bulk_import.py  supabase_schema_aligned_normalizer.py  texas_county_normalizer_filtered.py  update_coordinates.py
scripts/maintenance/: batch_county_fix.py  enhanced_aligned_county_cleanup.py  investigate_coordinates.py  optimized_coordinate_updater.py  quick_coordinate_test.py  targeted_city_cleanup.py  update_all_coordinates.py
scripts/testing/: test_audit_fix.py  test_audit_log_simple.py  test_cancel_functionality.py  test_city_county_relationships.py  test_field_mapping_fix.py  test_incomplete_property_data.py  test_null_checks_complete.py  test_search_performance_logging.py  test_zoning_code_functionality.py  verify_propertypanel_audit_logging.py
scripts/utilities/: check_existing_indexes.py  cleanup_project_structure.py  find_any_property.py  find_test_property.py  fix_county_names.py  startup_monitoring.py
seek-property-platform/: FILTERPANEL_OPTIMIZATION_SUMMARY.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
seek-property-platform/src/: App.tsx  main.tsx  reset.d.ts
shared/: README.md  tsconfig.json
sql/foia/: fire_sprinkler_updates.sql
sql/indexes/: create_critical_indexes.sql  pre_import_database_optimization.sql  task_3_1_foia_index_optimization.sql
sql/schema/: schema_fixes.sql  (+5 more)
src/: __init__.py
tests/: __init__.py  conftest.py
tools/: maintain_project_structure.py  pre-commit-hook  setup_git_hooks.sh
(+139 files in other folders)
