[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "primer-seek-property-api"
version = "0.1.0"
description = "FastAPI backend for Primer Seek Property sourcing system - Texas, Alabama, Florida property data management"
authors = ["David Cavise <david@primer.com>"]
maintainers = ["Primer Team <team@primer.com>"]
readme = "README.md"
homepage = "https://github.com/primer/seek-property"
repository = "https://github.com/primer/seek-property"
documentation = "https://github.com/primer/seek-property/blob/main/README.md"
keywords = ["fastapi", "property", "real-estate", "geospatial", "texas", "alabama", "florida"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
]
packages = [{include = "src"}]

[tool.poetry.scripts]
dev = "src.main:main"

[tool.poetry.dependencies]
python = "^3.12"
# Core FastAPI and ASGI dependencies
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
# Database and ORM
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
alembic = "^1.13.0"
asyncpg = "^0.30.0"
# Redis for caching
redis = {extras = ["hiredis"], version = "^5.0.0"}
# DuckDB for high-performance CSV processing - temporarily disabled due to compilation issues
# duckdb = "^0.10.0"
# Authentication and security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
# Supabase integration
supabase = "^2.3.0"
# Geospatial processing
geopandas = "^0.14.0"
shapely = "^2.0.0"
geoalchemy2 = "^0.15.0"
# HTTP client for external APIs
httpx = "^0.26.0"
# Data processing and validation
pandas = "^2.2.0"
numpy = "^1.26.0"
# Logging and monitoring
structlog = "^24.1.0"
# Configuration management
python-dotenv = "^1.0.0"
duckdb = "^1.3.2"
psycopg2-binary = "^2.9.10"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
# Testing frameworks and utilities
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
# Code quality and formatting
black = "^24.0.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
# Security and safety checking
bandit = "^1.7.0"
safety = "^3.0.0"
# Development server and debugging
watchdog = "^4.0.0"
icecream = "^2.1.0"
# Database testing and fixtures
pytest-postgresql = "^6.0.0"
fakeredis = "^2.20.0"
# Additional testing utilities for FastAPI
httpx = "^0.26.0"
pytest-xdist = "^3.5.0"

# Ruff configuration
[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "C90", # mccabe complexity
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "ICN", # flake8-import-conventions
    "Q",   # flake8-quotes
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["T20", "ARG", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
exclude = [
    "venv/",
    "build/",
    "dist/",
]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101", "B601"]
